--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 OpenMOC: An Open-Source Method of Characteristics Code
 
-Mantainers
+Maintainers
   FIXME: Add a list of each module and the module's mantainer here.
 
 Coding Conventions
